--- a/main.lagda.tex
+++ b/main.lagda.tex
@@ -52,6 +52,8 @@
 \newunicodechar{𝑣}{\ensuremath{\mathit{v}}}
 \newunicodechar{𝑝}{\ensuremath{\mathit{p}}}
 \newunicodechar{𝐴}{\ensuremath{\mathit{A}}}
+\newunicodechar{𝐸}{\ensuremath{\mathit{E}}}
+\newunicodechar{𝑙}{\ensuremath{\mathit{l}}}
 \newunicodechar{ℓ}{\ensuremath{\mathnormal{\ell}}}
 \newunicodechar{→}{\ensuremath{\mathnormal{\to}}}
 \newunicodechar{₁}{\ensuremath{\mathit{_1}}}
@@ -79,6 +81,9 @@
 \newunicodechar{π}{\ensuremath{\mathnormal{\pi}}}
 \newunicodechar{β}{\ensuremath{\mathnormal{\beta}}}
 \newunicodechar{η}{\ensuremath{\mathnormal{\eta}}}
+\newunicodechar{γ}{\ensuremath{\mathnormal{\gamma}}}
+\newunicodechar{α}{\ensuremath{\mathnormal{\alpha}}}
+\newunicodechar{δ}{\ensuremath{\mathnormal{\delta}}}
 \newunicodechar{ι}{\ensuremath{\mathnormal{\iota}}}
 \newunicodechar{λ}{\ensuremath{\mathnormal{\lambda}}}
 \newunicodechar{⇒}{\ensuremath{\mathnormal{\Rightarrow}}}
